--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
+    "react-toastify": "^8.1.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
+    "swiper": "^8.0.3",
     "typescript": "^4.5.4",
     "uuid": "^8.3.2",
     "webpack": "^5.65.0"
